[package]
name = "phoenix-v1"
version = "0.2.4"
edition = "2021"
resolver = "2"
repository = "https://github.com/Ellipsis-Labs/phoenix-v1"
authors = ["Ellipsis Labs <maintainers@ellipsislabs.xyz>"]
description = "On-chain order book that atomically settles trades"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[dependencies]
shank = "=0.0.12"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "3.0.2", features = [ "no-entrypoint" ] } 
solana-program = "1.17.17"
borsh = "1.5.0"
bytemuck = "1.16.0"
lib-sokoban = "=0.3.0" 
num_enum = "0.7.2"
itertools = "=0.10.5"
thiserror = "1.0.61"
ellipsis-macros = "=0.1.1" 
solana-security-txt = "1.1.1"
static_assertions = "=1.1.0"